  * pg_ctlcluster: pg_ctl's -o option is not cumulative, fix postmaster
    argument passing. This ensures that "-c unix_socket_directory" is always
    passed to the postmaster.
  * pg_createcluster: Do not configure a cluster for SSL if the owner is not
    the owner of /etc/postgresql-common/postgresql.pem. This fixes cluster
    creation for non-postgres owners.

 -- Martin Pitt <mpitt@debian.org>  Thu, 23 Jun 2005 22:26:58 +0200

postgresql-common (19) unstable; urgency=low

  * debian/postgresql-common.postinst: Generate an SSL certificate and key if
    it doesn't exist yet and openssl is installed. Closes: #212526
  * debian/control: Recommend openssl and explain its purpose.
  * pg_createcluster: If SSL certificate and key exist, symlink it to the
    cluster directory where the postmaster looks for them and enable SSL in
    the configuration.
  * debian/postgresql-common.postinst: Only restart servers when configuring.
  * debian/init.d-functions: "pg_ctl restart" does not seem to re-read certain
    configuration parameters like the socket directory, so replace it with
    stop+start.
  * debian/postgresql-common.postinst: Create /var/run/postgresql before
    creating the initial cluster to ensure that the socket directory will be
    present. Closes: #312899
  * Added debian/postgresql-common.postrm: Clean up on purge.
  * debian/postgresql-common.postinst: Check whether the user postgres exists
    before calling adduser to avoid confusing warning messages.

 -- Martin Pitt <mpitt@debian.org>  Wed, 22 Jun 2005 17:33:50 +0200

postgresql-common (18) unstable; urgency=low

  * pg_ctlcluster: Change directory to /var/lib/postgresql to avoid error
    messages when doing an operation in a directory which the database owner
    cannot access.
  * pg_ctlcluster: Pass the default socket directory to the postmaster,
    otherwise it will always be /tmp if unix_socket_directory is not specified
    in postgresql.conf. Closes: #314537